changed enter phrase

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div id="inputtext">
-		<input id="inputName" type="text" placeholder="Enter Name"> <br>
+		<input id="inputName" type="text" placeholder="Enter Name Plz"> <br>
 	</div>
 	<div id="inputbutton">
 		<button id="heyButton">Hey</button>
