--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	<div id="inputtext">
-		<input id="inputName" type="text" placeholder="Enter Name Plz"> <br>
+		<input id="inputName" type="text" placeholder="Enter Name PLz"> <br>
 	</div>
 	<div id="inputbutton">
-		<button id="heyButton">Hey</button>
+		<button id="heyButton">Heyyy</button>
 	</div>
 
 
