--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<input id="inputName" type="text" placeholder="Enter Name PLz"> <br>
 	</div>
 	<div id="inputbutton">
-		<button id="heyButton">Heyyy Click</button>
+		<button id="heyButton">Heyyy Click MEEE</button>
 	</div>
 
 
